--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@
     position: relative;
 }
 
+.price{
+    font-size: 0.7vw;
+    font-weight: 600;
+    line-height: 1vw;
+    text-align: center;
+}
 
 /*--------------------------------------------Corners------------------------------------------------------*/
 .top-left-corner{
@@ -309,10 +315,15 @@
 .card-image-bottom{
     position: absolute;
     right: 11%;
-    bottom: 18%;
+    bottom: 22%;
     width: 80%;
     height: auto;
 
+}
+
+.bottom-row .tile:nth-child(9) .card-image-bottom {
+    bottom: 13%;
+    position: absolute;
 }
 
 .card-image-bottom-income{
@@ -351,7 +362,25 @@
     transform: rotate(180deg);
 }
 
-
+/*--------------------------------------------Prices------------------------------------------------------*/
+.price-right {
+    top: 8%;
+    bottom: 0;
+    left: 30%;
+}
+.price-left {
+    top: 8%;
+    right: 30%;
+}
+.price-bottom {
+    position: absolute;
+    top: 88%;
+    width: 100%;
+    height: 100%;
+}
+.price-top {
+    bottom: 35%;
+}
 /*--------------------------------------------Rotations------------------------------------------------------*/
 .rotation90 {
     transform: rotate(90deg);
